<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PictureSearchActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/peach"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/purple_custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <View
        android:id="@+id/view7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_left_rounded_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <ImageView
        android:id="@+id/iv_searchedImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/searched_image_Description"
        android:maxWidth="400dp"
        android:maxHeight="400dp"
        android:minWidth="200dp"
        android:minHeight="200dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view5"
        app:srcCompat="@drawable/transparent_background" />

    <ProgressBar
        android:id="@+id/pbLoadImage"
        style="?android:attr/progressBarStyle"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progressbar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/iv_searchedImage"
        app:layout_constraintEnd_toEndOf="@+id/iv_searchedImage"
        app:layout_constraintStart_toStartOf="@+id/iv_searchedImage"
        app:layout_constraintTop_toTopOf="@+id/iv_searchedImage" />

    <TextView
        android:id="@+id/tvLoadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_result_here"
        android:gravity="center"
        android:maxWidth="300dp"
        android:visibility="visible"
        android:fontFamily="@font/rubik_mono_one"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_searchedImage"
        app:layout_constraintEnd_toEndOf="@+id/iv_searchedImage"
        app:layout_constraintStart_toStartOf="@+id/iv_searchedImage"
        app:layout_constraintTop_toTopOf="@+id/iv_searchedImage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchInputTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:textColorHint="@color/textInputHintColor"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/textInputHintColor"
        app:endIconDrawable="@drawable/ic_baseline_image_search_24"
        app:endIconMode="custom"
        app:endIconTint="@color/textInputHintColor"
        app:hintTextColor="@color/textInputHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_Search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:hint="@string/imageSearchETHint"
            android:textColor="@color/textInputHintColor" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>